--- a/Eshopping/Views/Shared/_Layout.cshtml
+++ b/Eshopping/Views/Shared/_Layout.cshtml
@@ -60,18 +60,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-lg-8 header-right mt-lg-0 mt-2">
                     <!-- header lists -->
                     <ul>
-                        <li class="text-center border-right text-white">
-                            <a class="play-icon popup-with-zoom-anim text-white" href="#small-dialog1">
-                                <i class="fas fa-map-marker mr-2"></i>Select Location
-                            </a>
-                        </li>
+                        @*<li class="text-center border-right text-white">
+            <a class="play-icon popup-with-zoom-anim text-white" href="#small-dialog1">
+                <i class="fas fa-map-marker mr-2"></i>Select Location
+            </a>
+        </li>*@
+
                         <li class="text-center border-right text-white">
                             <a href="#" data-toggle="modal" data-target="#exampleModal" class="text-white">
                                 <i class="fas fa-truck mr-2"></i>Track Order
                             </a>
                         </li>
                         <li class="text-center border-right text-white">
-                            <i class="fas fa-phone mr-2"></i> 001 234 5678
+                            <i class="fas fa-phone mr-2"></i> +91-8006073897
                         </li>
                         <li class="text-center border-right text-white">
                             <a href="#" data-toggle="modal" data-target="#exampleModal" class="text-white">
@@ -83,6 +84,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <i class="fas fa-sign-out-alt mr-2"></i>Register
                             </a>
                         </li>
+
+                        <li class="text-center border-right text-white">
+                            <a href="#" data-toggle="modal" data-target="#exampleModal" class="text-white">
+                                <i class="fas fa-user-alt mr-2"></i> Admin
+                            </a>
+                        </li>
+
+
+
                     </ul>
                     <!-- //header lists -->
                 </div>
